Added speakers link to footer

--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -8,14 +8,16 @@ footer.site-footer
             li
               a(href=pageUrl("about/team.html")) Team
             li
-              a(href=pageUrl("about/tickets.html")) #[strong Tickets]
+              a(href=pageUrl("about/speakers.html")) #[strong Speakers]
+            li
+              a(href=pageUrl("about/tickets.html")) Tickets
             li
               a(href=pageUrl("about/pycontest.html")) #PyConTest
             li
               a(href=pageUrl("about/sponsorship.html")) Sponsorship
             li
               a(href=pageUrl("about/code-of-conduct.html")) #[strong Code of Conduct]
-              
+
         li.section
           a.nav-title(href=pageUrl("getting-here/")) Getting Here
           ul
@@ -32,7 +34,7 @@ footer.site-footer
             li
               a(href=pageUrl("talks/#directions")) Directions
 
-        li.section 
+        li.section
           a.nav-title(href=pageUrl("workshops/")) Sprints &amp; Workshops
           ul
             li
@@ -41,7 +43,7 @@ footer.site-footer
               a(href=pageUrl("workshops/#directions")) Directions
             //- li
             //-   a(href=pageUrl("workshops/registration.html")) #[strong Registration]
-            
+
     .social-links
       | Spread the word about #[strong PyCon CZ!]
       ul
@@ -67,6 +69,6 @@ footer.site-footer
     .psf-trademark
       p
         :markdown
-          [PyCon™](href='https://www.python.org/psf/trademarks/pycon/') 
+          [PyCon™](href='https://www.python.org/psf/trademarks/pycon/')
           is a trademark for worldwide conference activities claimed by
           [Python Software foundation](href='https://www.python.org/psf-landing/').
