--- a/static/jade/about/pycontest.jade
+++ b/static/jade/about/pycontest.jade
@@ -21,7 +21,8 @@ block viewport
           a(href="https://drive.google.com/folderview?id=0B76bfeqN4RF2eVZNNlpwUDhFLTA&usp=sharing") 2nd challenge: 11:00 CET
         li 
           a(href="https://drive.google.com/folderview?id=0B76bfeqN4RF2OG5waVJ2WWNrLW8&usp=sharing") 3rd challenge: 12:00 CET
-        li 4th challenge: 13:00 CET
+        li
+          a(href="https://drive.google.com/folderview?id=0B76bfeqN4RF2TzVsNWJqbnpMU0U&usp=sharing") 4th challenge: 13:00 CET
         li 5th challenge: 14:00 CET
         li 
             strong End of Challenge - 17:00 CET
