Fixed times and added jarka

--- a/static/jade/about/pycontest.jade
+++ b/static/jade/about/pycontest.jade
@@ -25,7 +25,7 @@ block viewport
           a(href="https://drive.google.com/folderview?id=0B76bfeqN4RF2TzVsNWJqbnpMU0U&usp=sharing") 4th challenge: 13:00 CET
         li 5th challenge: 14:00 CET
         li 
-            strong End of Challenge - 17:00 CET
+            strong End of Challenge - 15th November at 10:00 CET
 
     h2 What is #PyConTest?
     
@@ -81,4 +81,4 @@ block viewport
         Winners will be determined by the results of the 5th challenge (don't be afraid, 
         it won't be a 'like'ing race) but bear in mind that you still need to have the first 
         four challenges submitted and they must all be correct. Winners will be 
-        announced before the lightning talks start.
+        announced during the lunch break at workshops on Sunday, November 15th.
