--- a/static/jade/about/pycontest.jade
+++ b/static/jade/about/pycontest.jade
@@ -23,7 +23,8 @@ block viewport
           a(href="https://drive.google.com/folderview?id=0B76bfeqN4RF2OG5waVJ2WWNrLW8&usp=sharing") 3rd challenge: 12:00 CET
         li
           a(href="https://drive.google.com/folderview?id=0B76bfeqN4RF2TzVsNWJqbnpMU0U&usp=sharing") 4th challenge: 13:00 CET
-        li 5th challenge: 14:00 CET
+        li 
+          a(href="https://drive.google.com/folderview?id=0B76bfeqN4RF2bXBCUjB0VHJkb28&usp=sharing") 5th challenge: 14:00 CET
         li 
             strong End of Challenge - 15th November at 10:00 CET
 
