Updated info at homepage.

--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -50,9 +50,9 @@ block viewport
           open-source projects together with other Python community members.
     
     .registration
-      h2 Registration is now closed
+      h2 PyCon CZ 2015 is over
       p.lead.
-        See you all at PyCon CZ 2015!
+        See you all at the next PyCon CZ!
     
       h2 What people think about PyCon CZ?
       
@@ -87,9 +87,9 @@ block viewport
         .sponsor
           a.sponsor-inuits(href="https://inuits.eu")
             img(src=pageUrl("/static/images/sponsors/inuits.png"))
-        
-      a.alone.sponsor-placeholder(href=pageUrl("about/sponsorship.html")).
-        Become our partner!
+      //-   
+      //- a.alone.sponsor-placeholder(href=pageUrl("about/sponsorship.html")).
+      //-   Become our partner!
 
       .djangogirls
         h3 DjangoGirls workshop sponsor
