Making some changes to fit PyCon IL.

--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -7,7 +7,7 @@ block viewport
   .pycon
     img.pycon-logo(
       alt="PyCon CZ",
-      src='/'+year+"/static/images/pycon-cz-logo-icon.svg",
+      src='/'+year+"/static/images/pycon-il-logo.png",
       onerror="this.onerror = null; this.src = '/2015/static/images/pycon-cz-logo.png'"
     )
     
@@ -16,13 +16,13 @@ block viewport
       span.year= year
 
     .pycon-info
-      p.pycon-location Brno, Czech Republic
-      p.pycon-date November 14-15
+      p.pycon-location Tel Aviv, Israel
+      p.pycon-date May 2-3
 
   .claim
     .container
       p.
-        The very first #[strong PyCon] in the #[strong Czech Republic]. Join us
+        The very first #[strong PyCon] in #[strong Israel]. Join us
         for a fun weekend full of talks, sprints and workshops about Python.
 
   .container
