Changing to year 2016, made some other minor changes (mostly spelling/grammar, replacing CZ with IL, etc).

--- a/static/jade/base.jade
+++ b/static/jade/base.jade
@@ -5,8 +5,9 @@ doctype html
 html(lang='en-us')
   head
     block title
-      title= "PyCon CZ " + year
+      title= "PyCon IL " + year
 
+    //- base(href='/'+year+'/')
     base(href='/'+year+'/')
 
     meta(charset='utf-8')
