--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -6,13 +6,13 @@ block vars
 block viewport
   .pycon
     img.pycon-logo(
-      alt="PyCon CZ",
+      alt="PyCon IL",
       src='/'+year+"/static/images/pycon-il-logo.png",
       onerror="this.onerror = null; this.src = '/2015/static/images/pycon-cz-logo.png'"
     )
     
     h1
-      | PyCon CZ
+      | PyCon IL
       span.year= year
 
     .pycon-info
@@ -23,7 +23,7 @@ block viewport
     .container
       p.
         The very first #[strong PyCon] in #[strong Israel]. Join us
-        for a fun weekend full of talks, sprints and workshops about Python.
+        for a fun 2 days full of talks, sprints and workshops about Python.
 
   .container
     .program
