initial content cleanup, hidden irrelevent and future pages, changed CZ to IL everywhere, started team page and reviewed CoC

--- a/static/jade/about/code-of-conduct.jade
+++ b/static/jade/about/code-of-conduct.jade
@@ -8,18 +8,18 @@ block viewport
     :markdown
       # Code of conduct
 
-      **PyCon CZ** is a community conference intended for networking and
+      **PyCon IL** is a community conference intended for networking and
       collaboration in the developer community. We value the participation of
       **each member** of the **Python community** and want all attendees to have
       an enjoyable and fulfilling experience. Accordingly, all attendees are
       expected to show **respect** and **courtesy** to other attendees throughout the
       conference and at all conference events, whether officially sponsored by
-      PyCon CZ or not.
+      PyCon IL or not, as well as virtual spaces, such as mailing lists and social media.
       
       To make clear what is expected:
       
       > All delegates, attendees, speakers, exhibitors, organizers and volunteers
-      at any **PyCon CZ** event are required to conform to the following Code of Conduct.
+      at any **PyCon IL** event are required to conform to the following Code of Conduct.
       
       Organizers will **enforce** this code throughout the event.
       
@@ -82,9 +82,9 @@ block viewport
     
     ul
       li Mikey Ariel at 
-        a(href="tel:+420702131141") +420 702 131 141
-      li Tomáš Ehrlich at 
-        a(href="tel:+420608219889") +420 608 219 889
+        a(href="tel:+972505955110") +972 50 595 5110
+      li Doron Fediuck at 
+        a(href="tel:+972545636785") +972 54 563 6785
         
     p.
       Conference staff will be happy to help participants contact venue security
