--- a/static/jade/about/sponsorship.jade
+++ b/static/jade/about/sponsorship.jade
@@ -1,4 +1,5 @@
 extends ../base
+//- HIDE FOR NOW
 
 block vars
   - var pageClass = "page-sponsors"
@@ -8,16 +9,16 @@ block viewport
     h1.text-center Become our partner
     
     p.lead.
-      #[a(href=pageUrl("")) PyCon CZ] is a two-day conference organized by
+      #[a(href=pageUrl("")) PyCon IL] is a two-day conference organized by
       the Python community for the Python community. The conference will include
       1 full day of talks featuring 2 international keynote speakers (all
       sessions will be held in English), and 1 day of sprints and workshops
       where Pythonistas can get together and work on their open source projects.
 
     p.
-      This year is the first edition of PyCon CZ, and we are looking forward
+      This year is the first edition of PyCon IL, and we are looking forward
       to bringing the tradition of diverse and insightful speakers, top-quality
-      venues, and a great atmosphere to the Czech Republic. Regional PyCons are
+      venues, and a great atmosphere to Israel. Regional PyCons are
       well-known for attracting developers, sysadmins, writers, designers, and
       community members from all over.
 
