--- a/static/jade/components/vars.jade
+++ b/static/jade/components/vars.jade
@@ -1,4 +1,4 @@
-- var contactEmail = "info@pycon.cz"
+- var contactEmail = "info@pycon.org.il"
 - var year = "2016"
 //- - var ticketsLink = "https://ti.to/pyvec/pycon-cz-2015/"
 //- - var urlBase = "https://cz.pycon.org/" + year + "/"
