--- a/static/jade/getting-here/index.jade
+++ b/static/jade/getting-here/index.jade
@@ -1,4 +1,5 @@
 extends ../base
+//- HIDE FOR NOW
 
 block vars
   - var pageClass = "page-getting-here"
@@ -13,7 +14,7 @@ block viewport
       bought your #[a(href=pageUrl("about/tickets.html")) ticket] and now
       you're planning your trip to the lovely village called Brno.
 
-    a.anchor(id="travelling")
+    a.anchor(id="travel")
     h2 Travelling
 
     p.
