--- a/static/jade/components/navbar.jade
+++ b/static/jade/components/navbar.jade
@@ -6,29 +6,29 @@ header#top
     ul.nav.navbar-nav
       li.about
         a(href=pageUrl("#")) About
-      li.getting-here(class=activePage == "getting-here" ? "active" : "")
-        a(href=pageUrl("getting-here/")) Getting here
+      //- li.getting-here(class=activePage == "getting-here" ? "active" : "")
+        a(href=pageUrl("getting-here/")) Getting Here
       //- li.tickets
       //-   a(href=pageUrl("about/pycontest.html"))
       //-     | #PyConTest
-      li.videos
+      //- li.videos
         a(href="http://www.superlectures.com/pycon2015/")
           | Videos
-      li.photos
+      //- li.photos
         a(href="https://goo.gl/photos/Sdpx5ZACzU9hsD9i8")
           | Photos
-      li.talks(class=activePage == "talks" ? "active" : "")
+      //- li.talks(class=activePage == "talks" ? "active" : "")
         a(href=pageUrl("talks/"))
           | Talks
           span.date Saturday 14th
-      li.sprints(class=activePage == "workshops" ? "active" : "")
+      //- li.sprints(class=activePage == "workshops" ? "active" : "")
         a(href=pageUrl("workshops/"))
           | Sprints &amp; workshops
           span.date Sunday 15th
     
-    a(href="/2015/")
+    a(href="/2016/")
       img.pycon-logo(
-        alt="PyCon CZ",
-        src='/'+year+"/static/images/pycon-cz-logo-icon.svg",
-        onerror="this.onerror = null; this.src = '/2015/static/images/pycon-cz-logo.png'"
+        alt="PyCon IL",
+        src='/'+year+"/static/images/pycon-il-logo-icon.svg",
+        onerror="this.onerror = null; this.src = '/2016/static/images/pycon-il-logo.png'"
       )
