--- a/static/jade/workshops/index.jade
+++ b/static/jade/workshops/index.jade
@@ -1,6 +1,7 @@
 extends ../base
-
+//- HIDE FOR NOW
 //- render single speaker
+
 mixin talk(workshop)
   .workshop
     //- img.avatar(src=avatar(workshop.avatar), alt='Photo of ' + workshop.name)
